<resources>
    <string name="app_name">Login App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="sign_up">Sign up</string>
    <string name="all_done">ALMOST DONE!</string>
    <string name="you_have_successfully_registered">You have successfully registered.</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="max_length">Max Length 8</string>
    <string name="done">Done</string>
    <string name="not_empty_emPass">Email and Password field cannot be empty</string>
    <string name="send_reset_link">Send Link</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="sent">Resend</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="name">Name:</string>
    <string name="email_new">Email:</string>
    <string name="account_options">Account Options</string>
    <string name="update_account_details">Update Account Details</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_acct">Delete Account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="example_email">example@example.com</string>
    <string name="email_verification_status">Email Verification:</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="follow_me_on">Follow Me On:</string>
    <string name="update_credentials">Update Credentials</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete">Delete</string>
    <string name="enter_password">Enter your Password</string>
    <string name="password_verification_needed_for_this_operation">Password verification needed for this operation.</string>
    <string name="verify">Verify</string>
    <string name="you_can_t_undo_this_action">You can\'t undo this action</string>
    <string name="cancel">Cancel</string>
    <string name="bottom_sheet">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="instagram_icon">instagram icon</string>
    <string name="enter_name">Enter Name</string>
    <string name="not_empty_naEmPass">Email, Name and Password field cannot be empty</string>
    <string name="not_empty">Field Cannot Be Empty</string>
</resources>