<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileLayout"
    tools:context=".UserAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profilePic"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:civ_border_color="@color/error"
        app:civ_border_width="2dp"
        app:civ_border="true"
        android:src="@drawable/profile_image"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_round_person_24"
            android:drawablePadding="12dp"
            android:paddingStart="24dp"
            android:paddingEnd="1dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilePic" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="5dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            android:text="@string/dummy_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/nameTitle"
            app:layout_constraintTop_toBottomOf="@id/profilePic" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_round_email_24"
            android:drawablePadding="12dp"
            android:paddingStart="24dp"
            android:paddingEnd="1dp"
            android:paddingTop="10dp"
            android:layout_marginStart="20dp"
            android:paddingBottom="20dp"
            android:text="@string/email_new"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="5dp"
            android:paddingTop="10dp"
            android:paddingEnd="24dp"
            android:paddingBottom="20dp"
            android:text="@string/example_email"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/emailTitle"
            app:layout_constraintTop_toBottomOf="@id/nameTxt" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailVerifiedStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_round_verified_user_24"
            android:drawablePadding="12dp"
            android:paddingStart="24dp"
            android:paddingEnd="1dp"
            android:paddingTop="1dp"
            android:layout_marginStart="20dp"
            android:paddingBottom="24dp"
            android:text="@string/email_verification_status"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailTxt" />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingStart="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingTop="1dp"
            android:paddingEnd="24dp"
            android:paddingBottom="24dp"
            android:text="@string/False"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/emailVerifiedStatus"
            app:layout_constraintTop_toBottomOf="@id/emailTxt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/accountOptionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/ic_baseline_settings_24"
            android:padding="18dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/account_options"
            android:textAllCaps="false"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/account_bottom_app_sheet"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>